Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Education_Preferences__c.field-meta.xml
<CustomField>
    <fullName>Education_Preferences__c</fullName>
    <label>Education Preferences</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Office Lunch &amp; Learn</fullName>
            </value>
            <value>
                <fullName>Virtual</fullName>
            </value>
            <value>
                <fullName>Biologic Co-ordinator</fullName>
            </value>
            <value>
                <fullName>Webinar</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>