Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Payload__c.field-meta.xml
<CustomField>
    <fullName>Payload__c</fullName>
    <description>Sample field to capture JSON Payload being generated by the Apex Class</description>
    <inlineHelpText>Sample field to capture JSON Payload being generated by the Apex Class</inlineHelpText>
    <label>Payload</label>
    <length>20000</length>
    <type>LongTextArea</type>
</CustomField>