Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Prescribing_Process_Notes__c.field-meta.xml
<CustomField>
    <fullName>Prescribing_Process_Notes__c</fullName>
    <inlineHelpText>Notes on Biological prescribing process/PA process</inlineHelpText>
    <label>Prescribing Process Notes</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>