Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Report_Preferences_Other__c.field-meta.xml
<CustomField>
    <fullName>Report_Preferences_Other__c</fullName>
    <inlineHelpText>Please fill this in if you have selected &quot;Other&quot; in Report Preference</inlineHelpText>
    <label>Report Preferences (Other)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>