Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/sftpOrdersDir__c.field-meta.xml
<CustomField>
    <fullName>sftpOrdersDir__c</fullName>
    <label>SFTP Orders Directory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>