Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/sftpUsername__c.field-meta.xml
<CustomField>
    <fullName>sftpUsername__c</fullName>
    <label>SFTP Username</label>
    <length>100</length>
    <type>Text</type>
</CustomField>