Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/TRF_Preference__c.field-meta.xml
<CustomField>
    <fullName>TRF_Preference__c</fullName>
    <label>TRF Preference</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>EMR</fullName>
            </value>
            <value>
                <fullName>E-Fax</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>