Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Type_of_Practice__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Practice__c</fullName>
    <label>Type of Practice</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Community Based</fullName>
            </value>
            <value>
                <fullName>Academic</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>