Mindera/LIMSCallout/force-app/main/default/objects/Account/fields/Type_of_Prescriber__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Prescriber__c</fullName>
    <label>Type of Prescriber</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MD</fullName>
            </value>
            <value>
                <fullName>DO</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>